# Cloud-Cover

./: .gitignore  README.md  pyproject.toml  requirements.txt
cloud_cover/: load_npy.py  test_thresholding.py  use_download_dem.py
cloud_cover/src/: download_dem.py  threshold_mask.py
cloud_cover/src/random_forest/: random_forest_cloud_detection.py  rfcd_l8_dataloader.py  test_rf_classifier.py  train_rf.py  training_dataset_prep.py
